--- a/grupal/pubspec.yaml
+++ b/grupal/pubspec.yaml
@@ -27,3 +27,7 @@ flutter:
     - assets/images/home_icon.png
     - assets/images/cart_icon.png
     - assets/images/ticket_icon.png
+    - assets/images/Jarron.png
+    - assets/images/Flor.png
+    - assets/images/ArregloFL.png
+    - assets/images/Ramo.png
